Fix of overlapping bottons

--- a/hypster/Areas/apps/css/appSite0.css
+++ b/hypster/Areas/apps/css/appSite0.css
@@ -4826,9 +4826,18 @@ a:visited
 {
 	float:left; 
 	width:98%; 
-	padding:0 2% 0% 0%; 
 	border-radius:2px;
 	text-align:left;
+}
+
+.PostNav_cont
+{ 
+	padding:0 2% 0% 0%; 
+}
+
+.PostNav_contT
+{
+	padding:2% 2% 0% 0%; 
 }
 
 .PostNav_cont
