--- a/hypster/Areas/apps/css/appSite2.css
+++ b/hypster/Areas/apps/css/appSite2.css
@@ -4823,19 +4823,20 @@ a:visited
 .PostNav_contT
 {
 	float:left; 
-	width:680px; 
-	padding:0 2% 0% 0%; 
+	width:680px;
 	border-radius:2px;
 	text-align:left;
 }
 
 .PostNav_cont
 {
+    padding:0 2% 0% 0%;
     margin:35px 0 13px 0;
 }
 
 .PostNav_contT
 {
+    padding:2% 2% 0% 0%;
     margin:-15px 0 5px 0;
 }
 
